objects/ETM_Price_Agreement__c.object
<CustomObject>
    <label>ETM Price Agreement</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>ETM Price Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ETM Price Agreements</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>ETM Price Agreements</relationshipLabel>
        <relationshipName>ETM_Price_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Price__c</fullName>
        <label>Special Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
</CustomObject>